2007-01-02 [colin]	1.91.0cvs12

	* src/vcal_folder.c
		Fix bug 1086, 'deep recursion in vCalendar 
		export'

2006-12-29 [colin]	1.91.0cvs11

	* src/vcal_meeting_gtk.c
		Fix alertpanel on automatic export

2006-12-28 [colin]	1.91.0cvs10

	* src/vcal_meeting_gtk.c
		Make tooltips part of the meeting struct
		Add tooltip on attendees' entries

2006-12-27 [colin]	1.91.0cvs9

	* src/vcal_folder.c
	* src/vcal_manager.c
		Fix summaries with \n's in subject

2006-12-27 [colin]	1.91.0cvs8

	* src/vcal_meeting_gtk.c
		Better handling of bound moves when
		creating a meeting

2006-12-27 [colin]	1.91.0cvs7

	* src/vcal_folder.c
	* src/vcal_manager.c
	* src/vcalendar.c
		Add recurrence support to webcal feeds

2006-12-27 [colin]	1.91.0cvs6

	* src/vcal_folder.c
	* src/vcal_folder.h
	* src/vcal_manager.c
	* src/vcal_manager.h
	* src/vcal_meeting_gtk.c
	* src/vcalendar.c
		Add recurrence support in meetings

2006-12-22 [wwp]	1.91.0cvs5

	* src/vcal_prefs.c
		Remove extra spaces in labels, used to pad widgets.

2006-12-15 [ticho]	1.91.0cvs4

	* configure.ac
	* src/plugin.c
		Use check_plugin_version() for version check.

2006-12-15 [colin]	1.91.0cvs3

	* src/vcal_manager.c
		Make sure we don't increment SEQUENCE on replies
		(From RFC2445, 4.8.7.4 Sequence Number)
	* src/vcalendar.c
		Fix "(null)" names

2006-12-06 [colin]	1.91.0cvs2

	* src/vcal_manager.c
		Fix double encoding of subject

2006-12-06 [paul]	1.91.0cvs1

	* src/vcal_manager.c
		renaming

2006-12-04 [paul]	1.91.0

	1.91 released

2006-11-28 [paul]	1.90.0cvs5

	* configure.ac
		bump required version of Claws
		following renaming
		Thanks to Charles Edwards for the
		reminder

2006-11-27 [paul]	1.90.0cvs4

	* debian/README.Debian
	* src/plugin.c
	* src/vcal_folder.c
		renaming

2006-11-17 [wwp]	1.90.0cvs3

	* src/vcal_folder.c
		Don't use a hardcoded plugin URI as it's in defs.

2006-11-08 [paul]	1.90.0cvs2

	* src/vcal_folder.c
		update Claws Mail url

2006-11-07 [paul]	1.90.0cvs1

	* COPYING
	* ChangeLog
	* README