@@ -3,7 +3,7 @@
   FILE: icalperiod.c
   CREATOR: eric 02 June 2000
   
-  $Id: icalperiod.c,v 1.1.2.1 2005-07-04 17:06:57 colinleroy Exp $
+  $Id: icalperiod.c,v 1.1.2.2 2007-01-02 17:46:12 colinler Exp $
   $Locker:  $
     
  (C) COPYRIGHT 2000, Eric Busboom, http://www.softwarestudio.org
@@ -96,10 +96,11 @@ struct icalperiodtype icalperiodtype_from_string (const char* str)
     } 
 
     icalerrno = e;
-
+    icalmemory_free_buffer(s);
     return p;
 
  error:
+    icalmemory_free_buffer(s);
     icalerror_set_errno(ICAL_MALFORMEDDATA_ERROR);
     return null_p;
 }
@@ -132,7 +133,8 @@ const char* icalperiodtype_as_ical_string(struct icalperiodtype p)
     icalmemory_append_char(&buf, &buf_ptr, &buf_size, '/'); 
 
     icalmemory_append_string(&buf, &buf_ptr, &buf_size, end); 
-    
+   
+    icalmemory_add_tmp_buffer(buf); 
 
     return buf;
 }
